--- a/entrega2/Makefile
+++ b/entrega2/Makefile
@@ -1,15 +1,15 @@
 # Unix makefile for tigermain example
 
-HOME=~
-MOSMLHOME=${HOME}/mosml
-MOSMLTOOLS=camlrunm $(MOSMLHOME)/tools
+HOME=/usr/bin
+MOSMLHOME=${HOME}
+MOSMLTOOLS=camlrunm /usr/share/mosml/tools
 MOSMLLEX=mosmllex
 MOSMLYACC=mosmlyac -v
 
 GCC=gcc
 CFLAGS= -g
-MOSMLC=${MOSMLHOME}/bin/mosmlc -c -liberal
-MOSMLL=${MOSMLHOME}/bin/mosmlc
+MOSMLC=${MOSMLHOME}/mosmlc -c -liberal
+MOSMLL=${MOSMLHOME}/mosmlc
 
 # Unix
 REMOVE=rm -f
@@ -24,16 +24,16 @@ EXEFILE=
 .SUFFIXES :
 .SUFFIXES : .sig .sml .ui .uo
 
-GRALOBJS= tigerabs.uo tigergrm.uo tigerlex.uo tigermain.uo \
-	tigernlin.uo tigerpp.uo tigerescap.uo tigertab.uo tigerseman.uo tigertemp.uo topsort.uo tigertree.uo \
-	tigerframe.uo tigertrans.uo tigerit.uo tigerpila.uo
+GRALOBJS= tigerabs.uo tigergrm.uo tigerlex.uo tigercanon.uo \
+	tigernlin.uo tigerpp.uo tigerescap.uo tigertab.uo tigertopsort.uo tigerseman.uo tigertemp.uo  tigertree.uo \
+	tigermuestratipos.uo tigerframe.uo tigertrans.uo tigerit.uo tigerpila.uo tigerinterp.uo tigermain.uo
 
 all: tiger
 
 tiger: $(GRALOBJS) $(OBJSGEN)
 	$(MOSMLL) -o tiger $(EXEFILE) tigermain.uo
 
-tigergrm.sml tigergrm.sig: tigergrm.y 
+tigergrm.sml tigergrm.sig: tigergrm.y
 	$(MOSMLYACC) tigergrm.y
 
 tigerlex.sml: tigerlex.lex
@@ -65,26 +65,36 @@ depend: tigerabs.sml tigergrm.sml tigerlex.sml tigermain.sml \
 	$(MOSMLTOOLS)/mosmldep >> Makefile
 
 ### DO NOT DELETE THIS LINE
-tigerpp.uo: tigerabs.uo 
+tigertrans.ui: tigertree.uo tigerframe.ui tigertemp.ui tigerabs.uo 
+tigertopsort.ui: tigertab.ui tigertips.uo tigerabs.uo 
+tigermuestratipos.ui: tigertips.uo 
+tigercanon.ui: tigertree.uo tigertemp.ui 
+tigerframe.ui: tigertree.uo tigertemp.ui 
+tigerseman.uo: tigerseman.ui tigersres.uo tigertab.ui tigerpila.ui \
+    tigertopsort.ui tigertemp.ui tigerabs.uo tigertrans.ui 
+tigerinterp.ui: tigertree.uo tigerframe.ui tigertemp.ui 
+tigerescap.ui: tigerabs.uo 
+tigergrm.uo: tigergrm.ui tigernlin.uo tigerabs.uo 
 tigertrans.uo: tigertrans.ui tigertree.uo tigerpila.ui tigerframe.ui \
     tigerit.uo tigertemp.ui tigerabs.uo 
-tigertrans.ui: tigertree.uo tigerframe.ui tigertemp.ui tigerabs.uo 
-tigerescap.ui: tigerabs.uo 
-tigerframe.ui: tigertree.uo tigertemp.ui 
-tigerframe.uo: tigerframe.ui tigertree.uo tigertemp.ui 
-tigergrm.ui: tigerabs.uo 
-tigerseman.ui: tigerabs.uo 
-tigerescap.uo: tigerescap.ui tigertab.ui tigerabs.uo 
 tigerit.uo: tigertree.uo tigertab.ui 
-tigertree.uo: tigertemp.ui 
-tigerseman.uo: tigerseman.ui tigersres.uo tigertab.ui tigerpila.ui \
-    tigerabs.uo tigertrans.ui 
-tigergrm.uo: tigergrm.ui tigernlin.uo tigerabs.uo 
 tigerpila.uo: tigerpila.ui 
+tigermuestratipos.uo: tigermuestratipos.ui tigertips.uo 
+tigerseman.ui: tigerabs.uo 
+tigerframe.uo: tigerframe.ui tigertree.uo tigertemp.ui 
+tigercanon.uo: tigercanon.ui tigertree.uo tigertab.ui tigertemp.ui 
+tigertree.uo: tigertemp.ui 
+tigertopsort.uo: tigertopsort.ui tigertab.ui tigertips.uo tigerabs.uo 
+tigerpp.uo: tigerabs.uo 
+tigermain.uo: tigerseman.ui tigerescap.ui tigergrm.ui tigerframe.ui \
+    tigerit.uo tigercanon.ui tigerinterp.ui tigerlex.uo tigertrans.ui \
+    tigerpp.uo 
+tigertab.uo: tigertab.ui 
+tigergrm.ui: tigerabs.uo 
+tigerescap.uo: tigerescap.ui tigertab.ui tigerabs.uo 
 tigersres.uo: tigertab.ui tigertips.uo tigertemp.ui tigerabs.uo \
     tigertrans.ui 
-tigertab.uo: tigertab.ui 
-tigermain.uo: tigerseman.ui tigerescap.ui tigergrm.ui tigerlex.uo \
-    tigerpp.uo 
 tigertemp.uo: tigertemp.ui 
 tigerlex.uo: tigergrm.ui tigernlin.uo 
+tigerinterp.uo: tigerinterp.ui tigertree.uo tigertab.ui tigerframe.ui \
+    tigerit.uo tigertemp.ui 
